se esta agregando una explicacion en la seccion de España

--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -63,6 +63,11 @@ main {
   justify-content: center;
 }
 
+.Explicacion-Movida h1{
+  display: flex;
+  justify-content: center;
+}
+
 button {
   padding: 15px;
   width: 100px;
