se han subido dos imagenes de ejemplo y se esta haciendo la explicacion de la seccion de ' España '

--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -68,6 +68,12 @@ main {
   justify-content: center;
 }
 
+.seccion-img {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 button {
   padding: 15px;
   width: 100px;
