--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -11,6 +11,19 @@ main {
   justify-content: center;
 }
 
+.container{
+    background-color: black;
+    color: white;
+  }
+  
+  .nav-container{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  
+  }
+
 .main h1{
   display: flex;
   justify-content: center;
@@ -27,6 +40,20 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.explicacion-movida h1{
+  display: flex;
+  justify-content: center;
+}
+
+.explicacion-movida p{
+  width: 300px;
+  padding-left: 235px;
+}
+
+.explicacion-movida img{
+  width: 450px;
 }
 
 .header {
