--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -73,6 +73,12 @@ main {
   padding-left: 1350px;
 }
 
+.bandas-figuras{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .header {
   background-color: #92a8d1;
   height: 50px;
