--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -6,7 +6,9 @@ body {
   padding: 0;
 }
 
-main {
+
+
+img{
   display: flex;
   justify-content: center;
 }
@@ -61,6 +63,13 @@ main {
 .Explicacion-RRV img{
   width: 450px;
   padding-left: 755px;
+}
+
+.Explicacion-1{
+  display: flex;
+  text-align: start;
+  padding-left: 50px;
+  width: 250px;
 }
 
 .text-RRV{
@@ -127,6 +136,12 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.img-1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button {
