--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -79,6 +79,12 @@ img{
   padding-left: 50px;
 }
 
+.Hardcore-Punk{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .text-RRV{
   width: 250px;
   padding-left: 350px;
