--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -6,8 +6,6 @@ body {
   padding: 0;
 }
 
-
-
 img{
   display: flex;
   justify-content: center;
@@ -17,7 +15,7 @@ img{
     background-color: black;
     color: white;
   }
-  
+
   .nav-container{
     align-items: center;
     display: flex;
@@ -270,6 +268,14 @@ button {
 }
 
 .caja-1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
+.caja-2{
   display: flex;
   justify-content: center;
   align-items: center;
