--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -83,6 +83,12 @@ img{
   align-items: center;
 }
 
+.Ska-Punk{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .text-RRV{
   width: 250px;
   padding-left: 350px;
