se ha hecho la seccion de Pop Punk de USA y se ha puesto un video para esta

--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -308,6 +308,14 @@ button {
   gap: 20px;
 }
 
+.caja-4{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
 .caja{
   width: 250px;
   height: 250px;
