--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -100,6 +100,12 @@ img{
   align-items: center;
 }
 
+.Straight-Edge{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .text-RRV{
   width: 250px;
   padding-left: 350px;
@@ -309,6 +315,14 @@ button {
 }
 
 .caja-4{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
+.caja-5{
   display: flex;
   justify-content: center;
   align-items: center;
