se esta acabando el apartado USA

--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -111,7 +111,7 @@ iframe{
   align-items: center;
 }
 
-.Post-Hardcore h3{
+.Post-Hardcore{
   display: flex;
   flex-direction: column;
   justify-content: center;
