se han subido imagenes para la seccion de Japon

--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -350,6 +350,14 @@ iframe{
   gap: 20px;
 }
 
+.caja-7{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
 .caja{
   width: 250px;
   height: 250px;
