--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -358,6 +358,14 @@ iframe{
   gap: 20px;
 }
 
+.caja-8{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
 .caja{
   width: 250px;
   height: 250px;
