--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -149,6 +149,11 @@ iframe{
   flex-direction: column;
   align-items: center;
 }
+.Ska-Latam{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .text-RRV{
   width: 250px;
@@ -407,6 +412,14 @@ iframe{
 }
 
 .caja-10{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
+.caja-11{
   display: flex;
   justify-content: center;
   align-items: center;
