--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -155,6 +155,36 @@ iframe{
   align-items: center;
 }
 
+.Explicacion-Punk{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Explicacion-Punk p{
+  width: 500px;
+}
+
+.Explicacion-Punk img{
+  width: 500px;
+}
+
+.generos-punk{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+.generos-punk button{
+  padding: 15px;
+  width: 100px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+  background-color: black;
+  color: white;
+}
+
 .text-RRV{
   width: 250px;
   padding-left: 350px;
@@ -420,6 +450,22 @@ iframe{
 }
 
 .caja-11{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
+.caja-12{
+  display:  flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
+.seccion-1{
   display: flex;
   justify-content: center;
   align-items: center;
