se ha acabado el apartado de metal y se han subido 8 imagenes para este

--- a/Pagina Web/style.css
+++ b/Pagina Web/style.css
@@ -513,6 +513,22 @@ iframe {
   gap: 20px;
 }
 
+.caja-16{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
+.caja-17{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 20px;
+}
+
 .seccion-1 {
   display: flex;
   justify-content: center;
